@@ -22,6 +22,10 @@ ARI
  * The live recording object on recording events now contains a target_uri
    field which contains the URI of what is being recorded.
 
+res_pjsip
+------------------
+ * transport and endpoint ToS options (tos, tos_audio, and tos_video) may now
+   be set as the named set of ToS values (cs0-cs7, af11-af43, ef).
 
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 12.0.0 to Asterisk 12.1.0 ------------
